force-app/main/default/objects/HERDC_Audited_Income__c/HERDC_Audited_Income__c.object-meta.xml
<CustomObject>
    <label>Audited HERDC Income</label>
    <nameField>
        <displayFormat>AHI-{000000}</displayFormat>
        <label>HERDC Audited Income</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audited HERDC Income</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>