force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_CAOU_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_CAOU_Code__c</fullName>
    <label>CAOU Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>