force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Cat_Overall__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cat_Overall__c</fullName>
    <label>Overall Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>