force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_College__c.field-meta.xml
<CustomField>
    <fullName>I_RS_College__c</fullName>
    <label>College</label>
    <length>255</length>
    <type>Text</type>
</CustomField>