force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Comments__c</fullName>
    <label>Finance Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>