force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Correct_GL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Correct_GL__c</fullName>
    <label>Correct GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>