force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Cust_No__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cust_No__c</fullName>
    <label>SAP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>