force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Department__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Department__c</fullName>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>