force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Document_Number__c</fullName>
    <label>Document Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>