force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_ERA_Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_Eligible_Amount__c</fullName>
    <label>ERA Eligible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>