force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Fund_Scheme__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Fund_Scheme__c</fullName>
    <label>Fund Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>