force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Funding_Body__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Body__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Body</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>HERDC_Audited_Income</relationshipName>
    <type>Lookup</type>
</CustomField>