force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_GL_Account_in_SAP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_GL_Account_in_SAP__c</fullName>
    <label>GL Account in SAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>