force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Grant_Donor__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Grant_Donor__c</fullName>
    <label>Grant Donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>