force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Grant_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Grant_ID__c</fullName>
    <label>Grant ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>