force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_HERDC_Return_Index__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HERDC_Return_Index__c</fullName>
    <label>HERDC Return Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>