force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Income_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Income_Expenditure__c</fullName>
    <label>Income/Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>