force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_La_Trobe_Fraction__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_Fraction__c</fullName>
    <defaultValue>1</defaultValue>
    <label>La Trobe Fraction</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>