force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_LU_FUND_NO__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LU_FUND_NO__c</fullName>
    <label>LU FUND NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>