force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_LU_Fund_Scheme_Funder__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LU_Fund_Scheme_Funder__c</fullName>
    <label>Funding Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>