force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Org_Unit__c</fullName>
    <label>Org Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>