force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Primary_Contact_SAP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Primary_Contact_SAP__c</fullName>
    <label>Primary Contact - SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>