force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>