force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Profit_Centre__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Profit_Centre__c</fullName>
    <label>Profit Centre</label>
    <length>10</length>
    <type>Text</type>
</CustomField>