force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal__c</fullName>
    <label>Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Audited HERDC Income</relationshipLabel>
    <relationshipName>HERDC_Audited_Income</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>