force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconciled?</label>
    <type>Checkbox</type>
</CustomField>