force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Reconciliation_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reconciliation_Notes__c</fullName>
    <label>Reconciliation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>