force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Rev_Exp__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Rev_Exp__c</fullName>
    <label>Revenue/Expenditure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>