force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_RM_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_RM_Project_Number__c</fullName>
    <label>Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>