force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_SAP_Current_HERDC_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_Current_HERDC_Category__c</fullName>
    <label>HERDC Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>