force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_SAP_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_Customer_Name__c</fullName>
    <label>SAP Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>