force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_SAP_HERDC_Sub_Category_2__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_HERDC_Sub_Category_2__c</fullName>
    <label>HERDC Sub-Category 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>