force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_SAP_HERDC_Sub_Category_3__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_HERDC_Sub_Category_3__c</fullName>
    <label>SAP - HERDC Sub-Category 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>