force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_SAP_HERDC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_HERDC_Sub_Category__c</fullName>
    <label>HERDC Sub-Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>