force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_ID__c</fullName>
    <externalId>true</externalId>
    <label>Staff ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>