force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_TEXT__c.field-meta.xml
<CustomField>
    <fullName>I_RS_TEXT__c</fullName>
    <label>Transaction Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>