force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Ultimate_source_of_funds__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ultimate_source_of_funds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate source of funds</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Audited HERDC Income (Ultimate source of funds)</relationshipLabel>
    <relationshipName>Audited_HERDC_Income</relationshipName>
    <type>Lookup</type>
</CustomField>