force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_University_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_University_Amount__c</fullName>
    <formula>I_RS_Income_Expenditure__c *  I_RS_La_Trobe_Fraction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>University Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>