force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_WBS__c.field-meta.xml
<CustomField>
    <fullName>I_RS_WBS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WBS Number</label>
    <referenceTo>WBS__c</referenceTo>
    <relationshipLabel>Audited HERDC Income</relationshipLabel>
    <relationshipName>HERDC_Audited_Income</relationshipName>
    <type>Lookup</type>
</CustomField>