force-app/main/default/objects/HERDC_Audited_Income__c/fields/I_RS_Year_of_Income__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_of_Income__c</fullName>
    <label>Year of Income</label>
    <length>4</length>
    <type>Text</type>
</CustomField>