force-app/main/default/objects/HERDC_Audited_Income__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_RM_Project_Number__c</columns>
    <columns>I_RS_WBS_CC__c</columns>
    <columns>I_RS_CAOU_Code__c</columns>
    <columns>I_RS_Profit_Centre__c</columns>
    <columns>I_RS_College__c</columns>
    <columns>I_RS_School__c</columns>
    <columns>I_RS_Department__c</columns>
    <columns>I_RS_Org_Unit__c</columns>
    <columns>I_RS_Primary_Contact_SAP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>